--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,13 +7,15 @@ import Gallery from '../components/Gallery.astro';
 import Contact from '../components/Contact.astro';
 import Footer from '../components/Footer.astro';
 import BaseLayout from '../layouts/BaseLayout.astro';
-
+import Us from '../components/Us.astro'
+import '../styles/global.css'
 ---
 
 <BaseLayout title="Del Pasaje">
 <Nav />
 
 	<Hero />
+	<Us />
 	<Dates />
 	<Media />
 	<Gallery />
