--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,10 +5,13 @@ import Dates from '../components/Dates.astro';
 import Media from '../components/Media.astro';
 import Gallery from '../components/Gallery.astro';
 import Contact from '../components/Contact.astro';
+import Entradas from '../components/Tickets.astro';
 import Footer from '../components/Footer.astro';
 import BaseLayout from '../layouts/BaseLayout.astro';
-import Us from '../components/Us.astro'
+import Us from '../components/About.astro'
 import '../styles/global.css'
+import FanWall from '../components/Fans/FanWall.astro';
+import FanForm from '../components/Fans/FanForm.astro';
 ---
 
 <BaseLayout title="Del Pasaje">
@@ -19,10 +22,8 @@ import '../styles/global.css'
 	<Dates />
 	<Media />
 	<Gallery />
+	<FanWall />
+	<FanForm />
 	<Contact />
 	<Footer />
-
-
-
-
 </BaseLayout>
