--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -7,7 +7,68 @@
       <li><a href="#fechas">Fechas</a></li>
       <li><a href="#media">Videos</a></li>
       <li><a href="#galeria">Galeria</a></li>
+      <li><a href="#fans">Fans</a></li>
+      
       <li><a href="#contacto">Contacto</a></li>
     </ul>
   </div>
 </nav>
+
+<style>
+  .nav {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  height: 72px;
+  background: rgba(97, 69, 58, 0.6);
+  backdrop-filter: blur(6px);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.nav-inner {
+  height: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+/*Aca despues corregimos cuando tenga el logo*/
+.nav-logo {
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: white;
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+  gap: 2rem;
+}
+
+.nav-links a {
+  text-decoration: none;
+  color: white;
+  font-size: 0.95rem;
+  position: relative;
+}
+
+.nav-links a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -4px;
+  width: 0;
+  height: 1px;
+  background: white;
+  transition: width 0.3s ease;
+}
+
+.nav-links a:hover::after {
+  width: 100%;
+}
+</style>
