--- a/src/components/Dates.astro
+++ b/src/components/Dates.astro
@@ -25,7 +25,7 @@ function canShowTickets(eventDate: string) {
 
 
 
-<section id="fechas" class="dates">
+<section id="fechas" class="section dates">
     <div class="main-container">
     <h2 class="section-title">Fechas</h2>
 
