--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,6 +12,7 @@
 
 html {
   scroll-behavior: smooth;
+  scroll-padding-top: 85px;
 }
 
 body {
@@ -28,31 +29,28 @@ h3 {
 }
 
 .main-container {
-    max-width: var(--container-width);
-    margin: 0 auto;
-    padding: 0 2rem;
-    width: 100%;
+  max-width: var(--container-width);
+  margin: 0 auto;
+  padding: 0 2rem;
+  width: 100%;
 }
 
-
 .section {
-  padding: 6rem 2rem;
+  padding-top: 2rem;
+  padding-bottom: 5rem;
+
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .section-title {
-  
   font-size: clamp(2rem, 4vw, 2.8rem);
   text-transform: uppercase;
   letter-spacing: 1px;
   margin-bottom: 2.5rem;
-  margin-top: 2rem;
+  margin-top: 0;
   text-align: left;
-
 }
-
-
-
-
 
 @media (min-width: 768px) {
   .video-grid {
@@ -65,5 +63,3 @@ h3 {
     grid-template-columns: repeat(3, 1fr);
   }
 }
-
-
